fix: improve typewriter functionality by managing perpetual visibility and cleanup
Resolves #8

--- a/src/assets/css/typewriter.css
+++ b/src/assets/css/typewriter.css
@@ -21,6 +21,10 @@
   --typewriter-iteration-count: infinite;
 }
 
+.typewriter {
+  --typewriter-show: block;
+}
+
 .typewriter-1 {
   --typewriter-speed: 1s;
   --typewriter-chars: 7;
@@ -35,6 +39,7 @@
   --show-typewriter: none;
 }
 
+.typewriter::after,
 .typewriter-1::after,
 .typewriter-2::after {
   display: var(--show-typewriter);
